--- a/style.qss
+++ b/style.qss
@@ -10,7 +10,13 @@
 /*= END
   ==================================================== */
 
-
+/*= Style Employee
+  ==================================================== */
+	#Employee{	
+	background:#2F3B52;
+}
+/*= END
+  ==================================================== */
 
 /*= Style for menu with icon only START
   ==================================================== */
