--- a/employee.ui
+++ b/employee.ui
@@ -490,27 +490,27 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -519,27 +519,27 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -548,27 +548,27 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -584,8 +584,11 @@
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">background-color: #f1f1f1;</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
